--- a/no.html
+++ b/no.html
@@ -1,5 +1,5 @@
-<link rel = "stylesheet" href="style.css"
-<body><center><img src = https://media1.tenor.com/m/iwGIN6fqzJwAAAAC/beomgyu-kys.gif></center></body>
+<link rel = "stylesheet" href="style.css">
+<body><center><img src = https://files.catbox.moe/hscn8i.gif></center></body>
 <script>
     window.onload = redir()
     async function redir(){
