--- a/yes.html
+++ b/yes.html
@@ -1,2 +1,2 @@
 <link rel = "stylesheet" href="style.css"
-<body><center><img src = https://files.catbox.moe/2isbsz.avif></center></body>
+<body><center><img src = https://files.catbox.moe/35hcu9.jpg></center></body>
