--- a/no.html
+++ b/no.html
@@ -8,3 +8,30 @@
         window.location.href = "index.html"
     }
 </script>
+<style>
+    button {
+    padding: 15px 30px;
+    background-color: #89cff0;
+    border-radius: 8px;
+    border: #89cff0;
+    position: absolute;
+    left: 45.5%
+}
+#no {
+    margin-right: 100px
+}
+#yes {
+    margin-left: 100px
+}
+button:hover {
+    background-color: #89cff0;
+}
+header {
+    color: #89cff0;
+    padding: 20px;
+}
+
+body {
+    background-color: white;
+}
+</style>
