--- a/yes.html
+++ b/yes.html
@@ -1,2 +1,29 @@
-<link rel = "stylesheet" href="style.css"
+<link rel = "stylesheet" href="style.css">
 <body><center><img src = https://files.catbox.moe/35hcu9.jpg></center></body>
+<style>
+    button {
+    padding: 15px 30px;
+    background-color: #89cff0;
+    border-radius: 8px;
+    border: #89cff0;
+    position: absolute;
+    left: 45.5%
+}
+#no {
+    margin-right: 100px
+}
+#yes {
+    margin-left: 100px
+}
+button:hover {
+    background-color: #89cff0;
+}
+header {
+    color: #89cff0;
+    padding: 20px;
+}
+
+body {
+    background-color: white;
+}
+</style>
